# 01.12.2018 v0.0.2
- precount_init() function to fill uint8_t precount[256] array removed. Now array is declared as const and
initialized during definition.
- int32_bit_count() function improved. there is new uint8_t precount16[65536] array with precounted bits for 2-bytes word.
Now counting is performed in 2 steps (4 steps before).
- New function bit_int32_count() to count bits in uint32_t array, just like bit_count() for uint8_t array.
- CHAR_BIT_SET() and CHAR_BIT_GET() macros renamed to BIT_SET() and BIT_GET() respectively.
- LIKELY(), UNLIKELY() macros added.
- CHAR_BIT_COUNT(), INT32_BIT_COUNT() macros added.
- BIT_ARRAY_GET() BIT_ARRAY_SET() macros added.

# 0.1.0
- trie_s structure rewritten almost completely. added separate flexible size structures nodes_s block, refs_s block, refs_free_s block.
- changes mapping letter index and bit number. Now they are the same, before index + 1 = bit number.
- minor refactoring.

# 0.1.1
- trie_add(), trie_char_add() functions renamed to yatrie_add(), yatrie_char_add(), respectively.

# 0.1.2
- problem with unintialized pointers in yatrie_new() fixed. malloc() replaced with calloc()
- yatrie_load() ref_t ref_ids[1000]; replaced with ref_t ref_ids[1000] = {};
- yatrie_load() fixed syntax error caused memory leak while list_push()

# 0.1.3
- decode_string() added terminator char to the end of the dst array

# 0.1.4
- precount_char_init() and char_get_bits_raised() refactored to make lib work with -O3 and -Ofast options enabled

# 0.1.5
- yatrie_save() return 0 if fopen is unable to open given file